--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="255-53-SRa">
     <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -8,80 +8,116 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Random Users-->
-        <scene sceneID="x9e-ak-aGy">
+        <!--Table View Controller-->
+        <scene sceneID="qYf-No-fot">
             <objects>
-                <viewController id="ebu-Xb-zf2" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="96d-FU-VXg">
+                <tableViewController id="Rce-It-iH2" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="cYf-mM-VU4">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="UserCell" rowHeight="75" id="ZkX-2u-hhd" userLabel="UserCell">
+                                <rect key="frame" x="0.0" y="28" width="414" height="75"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ZkX-2u-hhd" id="Bo6-xj-E3m">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="75"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="GIP-Ta-JiX">
+                                            <rect key="frame" x="20" y="11" width="50" height="50"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="50" id="68q-bK-7Uu"/>
+                                                <constraint firstAttribute="width" constant="50" id="Woc-im-4uw"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RUp-F4-aMi">
+                                            <rect key="frame" x="78" y="26" width="42" height="21"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="GIP-Ta-JiX" firstAttribute="top" secondItem="Bo6-xj-E3m" secondAttribute="topMargin" id="2Ju-zQ-vab"/>
+                                        <constraint firstItem="GIP-Ta-JiX" firstAttribute="leading" secondItem="Bo6-xj-E3m" secondAttribute="leadingMargin" id="aOs-RB-ns8"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="Xbj-ia-Qv5" kind="show" id="qHv-7e-cx7"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="Rce-It-iH2" id="stu-2P-v2V"/>
+                            <outlet property="delegate" destination="Rce-It-iH2" id="ulq-ew-a0O"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="jet-B1-CQw"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="YQR-MX-cXr" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="921.73913043478262" y="44.866071428571423"/>
+        </scene>
+        <!--Detail View Controller-->
+        <scene sceneID="Kac-UW-J2T">
+            <objects>
+                <viewController id="Xbj-ia-Qv5" customClass="DetailViewController" customModule="Random_Users" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="H9u-vs-1av">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="FFc-B3-zXc">
-                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationWidth="0.0" reuseIdentifier="UserCell" rowHeight="66" id="Fym-uC-jlM">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="66"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Fym-uC-jlM" id="rjA-9Z-Rvv">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="66"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="dkp-Ss-1jN">
-                                                    <rect key="frame" x="20" y="8" width="50" height="50"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="50" id="aV8-DE-ndY"/>
-                                                        <constraint firstAttribute="width" constant="50" id="quM-RD-Tyk"/>
-                                                    </constraints>
-                                                </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.10000000000000001" translatesAutoresizingMaskIntoConstraints="NO" id="f52-N6-ees">
-                                                    <rect key="frame" x="78" y="19" width="308" height="28"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                            </subviews>
-                                            <constraints>
-                                                <constraint firstItem="f52-N6-ees" firstAttribute="top" secondItem="rjA-9Z-Rvv" secondAttribute="topMargin" constant="8" id="4XQ-4f-zME"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="f52-N6-ees" secondAttribute="trailing" constant="8" id="DSQ-Yl-vh7"/>
-                                                <constraint firstItem="dkp-Ss-1jN" firstAttribute="leading" secondItem="rjA-9Z-Rvv" secondAttribute="leading" constant="20" id="TOd-WP-YfD"/>
-                                                <constraint firstItem="f52-N6-ees" firstAttribute="leading" secondItem="dkp-Ss-1jN" secondAttribute="trailing" constant="8" id="WfS-4M-3Rt"/>
-                                                <constraint firstItem="dkp-Ss-1jN" firstAttribute="top" secondItem="rjA-9Z-Rvv" secondAttribute="top" constant="8" id="jbF-LF-ZbU"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="f52-N6-ees" secondAttribute="bottom" constant="8" id="rJ5-rA-R6A"/>
-                                            </constraints>
-                                        </tableViewCellContentView>
-                                        <connections>
-                                            <segue destination="Xbj-ia-Qv5" kind="presentation" id="K9x-zg-yAx"/>
-                                        </connections>
-                                    </tableViewCell>
-                                </prototypes>
-                            </tableView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Ogl-Lr-4fQ">
+                                <rect key="frame" x="20" y="140" width="374" height="374"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="374" id="56b-FF-J51"/>
+                                    <constraint firstAttribute="height" constant="374" id="Ykb-44-od2"/>
+                                </constraints>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="125" translatesAutoresizingMaskIntoConstraints="NO" id="C6k-2W-xl6">
+                                <rect key="frame" x="20" y="522" width="374" height="340"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="nameLabel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j5r-oD-Yf9">
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="30"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="phoneLabel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HfM-a4-efQ">
+                                        <rect key="frame" x="0.0" y="155" width="374" height="30"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="emailLabel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cEZ-RY-DwY">
+                                        <rect key="frame" x="0.0" y="310" width="374" height="30"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="Ya3-xA-BBh" firstAttribute="bottom" secondItem="FFc-B3-zXc" secondAttribute="bottom" id="4vt-WK-b3d"/>
-                            <constraint firstItem="Ya3-xA-BBh" firstAttribute="trailing" secondItem="FFc-B3-zXc" secondAttribute="trailing" id="SJv-HS-TjU"/>
-                            <constraint firstItem="FFc-B3-zXc" firstAttribute="top" secondItem="Ya3-xA-BBh" secondAttribute="top" id="a8g-Cc-Awi"/>
-                            <constraint firstItem="FFc-B3-zXc" firstAttribute="leading" secondItem="Ya3-xA-BBh" secondAttribute="leading" id="dfr-zw-Jc5"/>
+                            <constraint firstItem="8qt-ZR-bf6" firstAttribute="trailing" secondItem="C6k-2W-xl6" secondAttribute="trailing" constant="20" id="Ixw-p3-0s3"/>
+                            <constraint firstItem="C6k-2W-xl6" firstAttribute="top" secondItem="Ogl-Lr-4fQ" secondAttribute="bottom" constant="8" id="Vf8-7o-IcK"/>
+                            <constraint firstItem="Ogl-Lr-4fQ" firstAttribute="top" secondItem="8qt-ZR-bf6" secondAttribute="top" id="hdw-9M-2JR"/>
+                            <constraint firstItem="C6k-2W-xl6" firstAttribute="leading" secondItem="8qt-ZR-bf6" secondAttribute="leading" constant="20" id="i5G-YV-5Fi"/>
+                            <constraint firstItem="C6k-2W-xl6" firstAttribute="bottom" secondItem="8qt-ZR-bf6" secondAttribute="bottom" id="mBn-DM-r0a"/>
+                            <constraint firstItem="Ogl-Lr-4fQ" firstAttribute="leading" secondItem="8qt-ZR-bf6" secondAttribute="leading" constant="20" id="v0U-Dr-ya2"/>
+                            <constraint firstItem="8qt-ZR-bf6" firstAttribute="trailing" secondItem="Ogl-Lr-4fQ" secondAttribute="trailing" constant="20" id="vzS-WT-4e3"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="Ya3-xA-BBh"/>
-                    </view>
-                    <navigationItem key="navigationItem" title="Random Users" id="V6f-fl-ig2"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="s4w-xb-fNK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="908.69565217391312" y="44.866071428571423"/>
-        </scene>
-        <!--View Controller-->
-        <scene sceneID="Kac-UW-J2T">
-            <objects>
-                <viewController id="Xbj-ia-Qv5" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="H9u-vs-1av">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="8qt-ZR-bf6"/>
                     </view>
+                    <navigationItem key="navigationItem" id="9ww-Ed-rDa"/>
+                    <connections>
+                        <outlet property="emailLabel" destination="cEZ-RY-DwY" id="3n4-4y-ecD"/>
+                        <outlet property="imageView" destination="Ogl-Lr-4fQ" id="OZW-Mr-2wW"/>
+                        <outlet property="nameLabel" destination="j5r-oD-Yf9" id="jLl-g6-7f8"/>
+                        <outlet property="phoneLabel" destination="HfM-a4-efQ" id="cEx-1t-UN0"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ySx-IX-FPD" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -98,7 +134,7 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="ebu-Xb-zf2" kind="relationship" relationship="rootViewController" id="lwt-Ar-tBx"/>
+                        <segue destination="Rce-It-iH2" kind="relationship" relationship="rootViewController" id="Vkp-Uo-pv6"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8CE-pE-c3b" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
